# fit-cvut

./: README  README.md  tcc-cv0201.c  tcc-cv0202.c  tcc-cv0301.c  tcc-cv0401.c  tcc-cv0402.c  tcc-cv0501.c  tcc-cv0601.c  tcc-cv0701.c  tcc-cv0801.c  tcc-cv0802.c  tcc-cv1001.c  tcc-test02.c  tcc-test03.c  tcc-test04.c  tcc-test07.c  test.sh  ukol0101.c  ukol0101.scm  ukol0201.c  ukol0601.c  ukol0801.c  ukoltest02.c
BI-AAG/: Makefile  README  csolver.c  cxxsolver.cpp  janoupre.lex  nfa
BI-APS/: matrixmult.s
BI-EFA/: Makefile  README  btreeplus.cpp  bucketsort.cpp  sorttest.cpp
BI-OSY/: Makefile  README  common_fs.h  common_ssvc.h  test_fs.cpp  test_ssvc.cpp  ukolfs.cpp  ukolssvc.cpp  ukolssvc_alt.cpp
BI-OSY/sample_ssvc/: 000.out  000.txt  001.out  001.txt  002.out  003.out  003.txt  004.out  004.txt  005.out  005.txt  006.out  006.txt  007.out  007.txt  keys
BI-PA1/: Makefile  README  tcc-cv0402.c  tcc-cv0502.c  tcc-cv0503.c  tcc-cv0602.c  tcc-cv0702.c  tcc-cv0803.c  tcc-cv0901.c  tcc-cv1002.c  tcc-cv10gen.c  tcc-test01.c  tcc-test05.c  tcc-test06.c  ukol0102.c  ukol0202.c  ukol0301.c  ukol0302.c  ukol0401.c  ukol0501.c  ukol0602.c  ukol0701.c  ukol0701.py  ukol0802.c  ukolkakuro.c  ukoltest01.c
BI-PA2/: Makefile  cv01.cpp  cv05.cpp  cv09.cpp  ukol0101.cpp  ukol0102.cpp  ukol0201.cpp  ukol0202.cpp  ukol0301.cpp  ukol0302.cpp  ukol04.cpp  ukol04.ref  ukol0501.cpp  ukol0502.cpp  ukol0601.cpp  ukol0601.ref  ukol0602.cpp  ukol0602.ref  ukoltest00a.cpp  ukoltest00b.cpp  ukoltest01a.cpp  ukoltest01b.cpp  ukoltest02a.cpp  ukoltest02b.cpp
BI-PA2/cv07/: Makefile  array.h  main.cpp  queue-array.h  queue-list.h
BI-PA2/cv08/: Makefile  auta.cpp  auta.h
BI-PA2/term-project/: .gitignore  LICENSE  Makefile.am  Makefile.progtest.in  README  aminclude.am  config.h.progtest.in  configure.ac
BI-PA2/term-project/doc/: Doxyfile.in  prohlaseni.txt  zadani.txt
BI-PA2/term-project/examples/: dense_Linux_x86_64  sparse_Linux_x86_64
BI-PA2/term-project/po/: LINGUAS  Makevars  POTFILES.in  cs.po  matrixcalc.pot
BI-PA2/term-project/src/: environ.cpp  environ.h  evalnodes.cpp  evalnodes.h  gettext.h  matrix.cpp  matrix.h  matrixcalc.cpp  parseexpr.cpp  parseexpr.h  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h  value.cpp  value.h
BI-PA2/ukol0101-data/: input1.txt  input2.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
BI-PA2/ukol0102-data/: elias1  elias2  elias3  elias4  ulonglong2  ulonglong3
BI-PSI/: Makefile  robot.c
BI-TED/ukol01/: Doxyfile  Makefile  ukol01.cpp
BI-VES/: .gitignore  Makefile  README  gen-ticket-machine.py  graphics.c  libves.c  libves.h  main.c  on-watching-register-writes  p24fxxxx.h  pwm-ui.c  ticket-machine.c  touch-app.c  touch.c  touch.h
(+38 files in other folders)
